--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,14 +15,21 @@
     "@mui/material": "^5.14.13",
     "@unocss/reset": "^0.56.5",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "fuse.js": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-use": "^17.4.0",
     "react-virtuoso": "^4.6.1",
+    "swr": "^2.2.4",
     "vaul": "^0.7.2"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.54",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -33,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
     "unocss": "^0.56.5",
+    "unplugin-icons": "^0.17.0",
     "vite": "^4.4.5"
   }
 }
