--- a/packages/dxdata/package.json
+++ b/packages/dxdata/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tsconfig",
+  "name": "@gekichumai/dxdata",
   "version": "0.0.0",
-  "main": "index.ts",
   "private": true,
+  "main": "index.ts",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
