--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-use": "^17.4.0",
     "react-virtuoso": "^4.6.1",
+    "sql.js": "^1.8.0",
     "swr": "^2.2.4",
     "vaul": "^0.7.2"
   },
@@ -39,6 +40,7 @@
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/sql.js": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
