--- a/scripts/annotator/package.json
+++ b/scripts/annotator/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@enjoyjs/node-mecab": "^0.5.0",
     "@gekichumai/dxdata": "*",
-    "esno": "^0.17.0"
+    "esno": "^0.17.0",
+    "fuse.js": "^7.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.201",
