--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "satori": "^0.10.9",
     "sql.js": "^1.8.0",
     "swr": "^2.2.4",
+    "ts-pattern": "^5.0.5",
     "vaul": "^0.7.2"
   },
   "devDependencies": {
