chore: update dxdata

--- a/scripts/annotator/package.json
+++ b/scripts/annotator/package.json
@@ -7,6 +7,9 @@
     "access": "public"
   },
   "scripts": {
+    "update:alias1": "curl -s https://raw.githubusercontent.com/lomotos10/GCM-bot/main/data/aliases/en/chuni.tsv -o ./aliases1.tsv",
+    "update:alias2": "curl -s https://api.yuzuai.xyz/maimaidx/maimaidxalias -o ./aliases2.json",
+    "update": "npm-run-all update:*",
     "run": "esno index.ts"
   },
   "dependencies": {
@@ -17,6 +20,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.201",
-    "@types/node": "^20.8.6"
+    "@types/node": "^20.8.6",
+    "npm-run-all": "^4.1.5"
   }
 }
