--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('Use yarn instead of npm for this project')\"",
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
