--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       # Run a build step here if your project requires
       # building before publishing to Cloudflare Pages.
       - name: Build
-        run: npm install && npm run build
+        run: yarn install && yarn run build
 
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
