--- a/scripts/annotator/package.json
+++ b/scripts/annotator/package.json
@@ -15,12 +15,16 @@
   "dependencies": {
     "@enjoyjs/node-mecab": "^0.5.0",
     "@gekichumai/dxdata": "*",
+    "dotenv": "^16.3.1",
     "esno": "^0.17.0",
-    "fuse.js": "^7.0.0"
+    "fuse.js": "^7.0.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.201",
     "@types/node": "^20.8.6",
-    "npm-run-all": "^4.1.5"
+    "@types/pg": "^8.10.9",
+    "npm-run-all": "^4.1.5",
+    "pg": "^8.11.3"
   }
 }
