--- a/apps/web/ios/App/App/App.entitlements
+++ b/apps/web/ios/App/App/App.entitlements
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>webcredentials:dxrating.imgg.dev</string>
+		<string>applinks:dxrating.imgg.dev</string>
+	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.dev.imgg.gekichumai.dxrating.public-shared</string>
