--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,8 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy:web": "wrangler pages deploy dist",
-    "deploy:ios": "capacitor sync ios"
+    "deploy:ios": "capacitor sync ios",
+    "gen:supabase": "supabase gen types typescript --project-id lbtpnmdffuimikksrvns > src/models/supabase.types.ts"
   },
   "dependencies": {
     "@capacitor/core": "^5.5.0",
@@ -19,8 +19,11 @@
     "@gekichumai/dxdata": "*",
     "@gekichumai/oneshot": "*",
     "@mui/material": "^5.14.13",
+    "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-table": "^8.10.7",
-    "@unocss/reset": "^0.56.5",
+    "@unocss/preset-mini": "^0.58.4",
+    "@unocss/preset-wind": "^0.58.4",
+    "@unocss/reset": "^0.58.4",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
@@ -52,7 +55,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.3.2",
-    "unocss": "^0.56.5",
+    "unocss": "^0.58.4",
     "unplugin-icons": "^0.17.0",
     "vite": "^4.4.5"
   }
