feat: hide launch OCR on web

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,8 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "cross-env-shell VITE_BUILD_PLATFORM=web \"vite\"",
+    "build": "echo 'WARNING: Use yarn build:web to build for web instead, or use yarn build:app to build for app instead. Building for web...' && yarn build:web",
+    "build:base": "tsc && vite build",
+    "build:app": "cross-env-shell VITE_BUILD_PLATFORM=app \"yarn build:base && rm -rf dist/js/*.map && capacitor copy\"",
+    "build:web": "cross-env-shell VITE_BUILD_PLATFORM=web \"yarn build:base && echo 'Artifacts built under dist/'\"",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "deploy:ios": "capacitor sync ios",
@@ -51,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
