--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@gekichumai/dxdata": "*",
     "@gekichumai/oneshot": "*",
     "@mui/material": "^5.14.13",
+    "@sentry/react": "^7.98.0",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-table": "^8.10.7",
     "@unocss/preset-mini": "^0.58.4",
@@ -31,10 +32,13 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "fuse.js": "^6.6.2",
+    "i18next": "^23.7.20",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^14.0.1",
     "react-use": "^17.4.0",
     "react-virtuoso": "^4.6.1",
     "satori": "^0.10.9",
@@ -58,6 +62,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "i18next-pseudo": "^2.2.1",
     "typescript": "^5.3.2",
     "unocss": "^0.58.4",
     "unplugin-icons": "^0.17.0",
