--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,11 +7,11 @@
     "dev": "cross-env-shell VITE_BUILD_PLATFORM=web \"vite\"",
     "build": "echo 'WARNING: Use yarn build:web to build for web instead, or use yarn build:app to build for app instead. Building for web...' && yarn build:web",
     "build:base": "tsc && vite build",
-    "build:app": "cross-env-shell VITE_BUILD_PLATFORM=app \"yarn build:base && rm -rf dist/js/*.map && capacitor copy\"",
+    "build:app": "cross-env-shell VITE_BUILD_PLATFORM=app \"yarn build:base && rm -rf dist/js/*.map && cap copy\"",
     "build:web": "cross-env-shell VITE_BUILD_PLATFORM=web \"yarn build:base && echo 'Artifacts built under dist/'\"",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy:ios": "capacitor sync ios",
+    "deploy:ios": "cap sync ios",
     "gen:supabase": "supabase gen types typescript --project-id lbtpnmdffuimikksrvns > src/models/supabase.types.ts"
   },
   "dependencies": {
@@ -51,6 +51,7 @@
     "@capacitor/cli": "^5.5.0",
     "@hookform/devtools": "^4.3.1",
     "@iconify-json/mdi": "^1.1.54",
+    "@iconify-json/ri": "^1.1.19",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/react": "^18.2.38",
