fix: added version filter

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,7 +45,8 @@
     "satori": "^0.10.9",
     "sql.js": "^1.8.0",
     "swr": "^2.2.4",
-    "ts-pattern": "^5.0.5"
+    "ts-pattern": "^5.0.5",
+    "use-long-press": "^3.2.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.5.0",
