fix: i18n, theme issues

--- a/scripts/annotator/package.json
+++ b/scripts/annotator/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "publishConfig": {
-    "access": "public"
+    "access": "restricted"
   },
   "scripts": {
     "run": "esno index.ts"
