--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
       # Run a build step here if your project requires
       # building before publishing to Cloudflare Pages.
       - name: Build
-        run: yarn install && yarn run build
+        run: yarn install && yarn run build:web
 
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
