--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,13 @@
-name: Publish to Cloudflare Pages
+name: Release
 
 on:
   push:
     # trigger on version tag push
     tags:
       - "v*"
+
+concurrency:
+  group: release-${{ github.ref }}
 
 jobs:
   publish:
@@ -70,20 +73,3 @@ jobs:
           # Optional: Enable this if you want to have GitHub Deployments triggered
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
           branch: main
-
-  deploy-functions:
-    runs-on: ubuntu-latest
-    name: Deploy Supabase Edge Functions
-
-    env:
-      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      PROJECT_ID: ${{ vars.SUPABASE_PROJECT_ID }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: supabase/setup-cli@v1
-        with:
-          version: latest
-
-      - run: supabase functions deploy --project-ref $PROJECT_ID
