build: add more ignore paths

--- a/.github/workflows/release-dispatcher.yml
+++ b/.github/workflows/release-dispatcher.yml
@@ -7,6 +7,9 @@ on:
       - main
     paths-ignore:
       - 'supabase/**'
+      - '.github/**'
+      - 'README.md'
+      - 'scripts/**'
 
 concurrency:
   group: release-dispatcher-${{ github.ref }}
