--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
     "marked": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geiger": "^1.1.0",
     "react-hook-form": "^7.50.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.0.1",
