feat: add cors to self-hosted-functions

--- a/packages/self-hosted-functions/package.json
+++ b/packages/self-hosted-functions/package.json
@@ -8,6 +8,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "cookie": "^0.6.0",
     "koa": "^2.15.2",
     "koa-bodyparser": "^4.4.1",
