--- a/packages/self-hosted-functions/package.json
+++ b/packages/self-hosted-functions/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@koa/cors": "^5.0.0",
+    "@resvg/resvg-js": "^2.6.2",
+    "clsx": "^2.1.0",
     "cookie": "^0.6.0",
     "koa": "^2.15.2",
     "koa-bodyparser": "^4.4.1",
     "koa-event-stream": "^1.0.3",
     "koa-router": "^12.0.1",
+    "satori": "^0.10.13",
+    "ts-pattern": "^5.1.1",
     "undici": "^6.11.1",
     "xmldom-qsa": "^1.1.3"
   },
@@ -23,6 +27,7 @@
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-router": "^7.4.8",
     "@types/koa__cors": "^5.0.0",
-    "esno": "^4.7.0"
+    "esno": "^4.7.0",
+    "nodemon": "^3.1.0"
   }
 }
