--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,7 +27,7 @@
     "@sentry/react": "^7.98.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.39.5",
+    "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-table": "^8.10.7",
     "@unocss/preset-mini": "^0.58.4",
     "@unocss/preset-wind": "^0.58.4",
@@ -40,6 +40,7 @@
     "fuse.js": "^6.6.2",
     "i18next": "^23.7.20",
     "i18next-browser-languagedetector": "^7.2.0",
+    "lodash-es": "^4.17.21",
     "marked": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -52,6 +53,7 @@
     "sql.js": "^1.8.0",
     "swr": "^2.2.4",
     "ts-pattern": "^5.0.5",
+    "type-fest": "^4.15.0",
     "use-long-press": "^3.2.0"
   },
   "devDependencies": {
@@ -61,6 +63,7 @@
     "@iconify-json/ri": "^1.1.19",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.7",
     "@types/sql.js": "^1.4.7",
