--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "@unocss/reset": "^0.58.4",
     "clsx": "^2.0.0",
     "colorjs.io": "^0.4.5",
+    "d3": "^7.9.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.16",
@@ -64,6 +65,7 @@
     "@iconify-json/ri": "^1.1.19",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
+    "@types/d3": "^7.4.3",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.7",
