--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,6 +63,7 @@
     "@hookform/devtools": "^4.3.1",
     "@iconify-json/mdi": "^1.1.54",
     "@iconify-json/ri": "^1.1.19",
+    "@sentry/vite-plugin": "^2.16.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/d3": "^7.4.3",
