--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -80,3 +80,6 @@ vector_port = 54328
 gcp_project_id = ""
 gcp_project_number = ""
 gcp_jwt_path = "supabase/gcloud.json"
+
+[functions.science-tunnel]
+verify_jwt = false
