--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "@mui/material": "^5.14.13",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@sentry/react": "^7.98.0",
+    "@sentry/vite-plugin": "^2.16.1",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.42.3",
