--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,6 +46,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "lodash-es": "^4.17.21",
     "marked": "^12.0.0",
+    "posthog-js": "^1.128.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-geiger": "^1.1.0",
