feat: add server-side alias support

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,11 +20,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["unplugin-icons/types/react"],
+    "types": ["unplugin-icons/types/react"]
 
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    // "paths": {
+    //   "@/*": ["./src/*"]
+    // }
   },
   "include": ["src", "src/types.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
