--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -59,7 +59,8 @@
     "swr": "^2.2.4",
     "ts-pattern": "^5.0.5",
     "type-fest": "^4.15.0",
-    "use-long-press": "^3.2.0"
+    "use-long-press": "^3.2.0",
+    "wouter": "^3.1.2"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.5.0",
