--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,10 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@gekichumai/dxdata": "*",
+    "@mantine/core": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
+    "@mantine/modals": "^7.12.2",
+    "@mantine/notifications": "^7.12.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/material": "^5.14.13",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -85,6 +89,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "i18next-pseudo": "^2.2.1",
+    "postcss": "^8.4.45",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.3.2",
     "unocss": "^0.58.4",
     "unplugin-icons": "^0.17.0",
