refactor: migrate more components

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,10 +22,10 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@gekichumai/dxdata": "*",
-    "@mantine/core": "^7.12.2",
-    "@mantine/hooks": "^7.12.2",
-    "@mantine/modals": "^7.12.2",
-    "@mantine/notifications": "^7.12.2",
+    "@mantine/core": "7.12.2",
+    "@mantine/hooks": "7.12.2",
+    "@mantine/modals": "7.12.2",
+    "@mantine/notifications": "7.12.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/material": "^5.14.13",
     "@radix-ui/react-collapsible": "^1.0.3",
