--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -67,6 +67,7 @@
     "@hookform/devtools": "^4.3.1",
     "@iconify-json/mdi": "^1.1.54",
     "@iconify-json/ri": "^1.1.19",
+    "@iconify-json/simple-icons": "^1.2.2",
     "@sentry/vite-plugin": "^2.16.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
