--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
     "tsconfig": "*",
-    "turbo": "latest"
+    "turbo": "^2.1.2"
   },
   "name": "@gekichumai/dxrating",
   "packageManager": "yarn@4.4.1",
