--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -85,6 +85,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "esno": "^4.8.0",
     "i18next-pseudo": "^2.2.1",
     "typescript": "^5.6.2",
     "unocss": "^0.63.3",
