--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/material": "^5.16.7",
     "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@sentry/react": "^7.119.2",
     "@sentry/vite-plugin": "^2.22.5",
     "@supabase/auth-ui-react": "^0.4.7",
@@ -35,6 +36,7 @@
     "@unocss/preset-mini": "^0.58.9",
     "@unocss/preset-wind": "^0.58.9",
     "@unocss/reset": "^0.58.9",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "colorjs.io": "^0.5.2",
     "d3": "^7.9.0",
@@ -45,6 +47,7 @@
     "i18next": "^23.15.2",
     "i18next-browser-languagedetector": "^7.2.1",
     "lodash-es": "^4.17.21",
+    "lucide-react": "^0.452.0",
     "marked": "^14.1.2",
     "posthog-js": "^1.167.0",
     "react": "^18.3.1",
@@ -57,6 +60,7 @@
     "react-virtuoso": "^4.10.4",
     "sql.js": "^1.11.0",
     "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.3",
     "ts-pattern": "^5.4.0",
     "type-fest": "^4.26.1",
     "use-long-press": "^3.2.0",
@@ -65,6 +69,7 @@
   "devDependencies": {
     "@capacitor/cli": "^5.7.8",
     "@hookform/devtools": "^4.3.1",
+    "@iconify-json/carbon": "^1.2.3",
     "@iconify-json/mdi": "^1.2.1",
     "@iconify-json/ri": "^1.2.1",
     "@iconify-json/simple-icons": "^1.2.7",
@@ -73,6 +78,7 @@
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/d3": "^7.4.3",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/sql.js": "^1.4.9",
@@ -89,6 +95,8 @@
     "i18next-pseudo": "^2.2.1",
     "typescript": "^5.6.3",
     "unocss": "^0.63.4",
+    "unocss-preset-animations": "^1.1.0",
+    "unocss-preset-shadcn": "^0.3.1",
     "unplugin-icons": "^0.19.3",
     "vite": "^4.5.5"
   }
