--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -70,6 +70,7 @@
     "@capacitor/cli": "^5.7.8",
     "@hookform/devtools": "^4.3.1",
     "@iconify-json/carbon": "^1.2.3",
+    "@iconify-json/material-symbols": "^1.2.4",
     "@iconify-json/mdi": "^1.2.1",
     "@iconify-json/ri": "^1.2.1",
     "@iconify-json/simple-icons": "^1.2.7",
