--- a/packages/self-hosted-functions/package.json
+++ b/packages/self-hosted-functions/package.json
@@ -17,6 +17,7 @@
     "koa-event-stream": "^1.0.3",
     "koa-router": "^12.0.1",
     "satori": "0.10.13",
+    "sharp": "^0.33.5",
     "ts-pattern": "^5.4.0",
     "undici": "^6.20.0",
     "xmldom-qsa": "^1.1.3"
