feat: add privacy policy

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -85,6 +85,7 @@
     "@types/sql.js": "^1.4.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@unocss/preset-typography": "^0.64.1",
     "@vitejs/plugin-react": "^4.3.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
