--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,10 @@
     "lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --fix && prettier --write .",
     "preview": "vite preview",
     "deploy:ios": "cap sync ios",
-    "gen:supabase": "supabase gen types typescript --project-id lbtpnmdffuimikksrvns > src/models/supabase.types.ts"
+    "gen:supabase": "supabase gen types typescript --project-id lbtpnmdffuimikksrvns > src/models/supabase.types.ts",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@capacitor/android": "^5.7.8",
@@ -87,6 +90,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@unocss/preset-typography": "^0.64.1",
     "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/ui": "^2.1.8",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -99,6 +103,7 @@
     "unocss-preset-animations": "^1.1.0",
     "unocss-preset-shadcn": "^0.3.1",
     "unplugin-icons": "^0.19.3",
-    "vite": "^4.5.5"
+    "vite": "^4.5.5",
+    "vitest": "^2.1.8"
   }
 }
