style: fix biome lint (1/n)

--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,8 @@
         "useSelfClosingElements": "warn"
       },
       "a11y": {
-        "useAltText": "off"
+        "useAltText": "off",
+        "useKeyWithClickEvents": "off"
       }
     }
   },
