--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,10 +19,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.12",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.12",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.12",
+    "dotenv": "^16.4.7",
+    "nestjs-supabase-auth": "^1.0.9",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.5",
@@ -33,6 +40,8 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.11",
+    "@types/passport": "^0",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "globals": "^15.15.0",
     "jest": "^29.7.0",
