--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,8 +25,11 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.12",
     "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.30.6",
+    "drizzle-orm": "^0.41.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "zod": "^3.24.2"
@@ -42,6 +45,7 @@
     "@types/node": "^22.13.11",
     "@types/passport": "^0",
     "@types/passport-jwt": "^4.0.1",
+    "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
     "globals": "^15.15.0",
     "jest": "^29.7.0",
