--- a/packages/self-hosted-functions/package.json
+++ b/packages/self-hosted-functions/package.json
@@ -4,6 +4,9 @@
   "main": "index.ts",
   "private": true,
   "license": "MIT",
+  "scripts": {
+    "dev": "esno index.ts"
+  },
   "publishConfig": {
     "access": "public"
   },
