--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,8 @@
     "@gekichumai/dxdata": "*",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/material": "^5.17.1",
+    "@orpc/client": "^1.13.2",
+    "@orpc/react": "^1.13.2",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@sentry/react": "^7.120.3",
@@ -33,12 +35,14 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/sentry-js-integration": "^0.1.0",
     "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-table": "^8.21.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@unocss/preset-mini": "^0.58.9",
     "@unocss/preset-wind": "^0.58.9",
     "@unocss/reset": "^0.58.9",
+    "better-auth": "^1.4.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "colorjs.io": "^0.5.2",
