--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,7 +26,10 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/material": "^5.17.1",
     "@orpc/client": "^1.13.2",
+    "@orpc/contract": "^1.13.4",
+    "@orpc/openapi-client": "^1.13.4",
     "@orpc/react": "^1.13.2",
+    "@orpc/tanstack-query": "^1.13.4",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@sentry/react": "^7.120.3",
