--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,16 +15,27 @@
     "@orpc/openapi": "^1.13.4",
     "@orpc/server": "^1.13.4",
     "@orpc/zod": "^1.13.4",
+    "@resvg/resvg-js": "^2.6.2",
     "@scalar/hono-api-reference": "^0.9.32",
+    "@sentry/node": "^10.34.0",
+    "@types/react": "^19.2.8",
     "better-auth": "^1.4.11",
+    "cookie": "^1.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.6.14",
     "postgres": "^3.4.8",
+    "react": "^19.2.3",
+    "satori": "^0.18.3",
+    "sharp": "^0.34.5",
+    "ts-pattern": "^5.9.0",
+    "undici": "^7.18.2",
+    "xmldom-qsa": "^1.1.3",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^22.10.2",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.17.0",
