--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -11,7 +11,8 @@
         ],
         "outDir": "./dist",
         "baseUrl": ".",
-        "noEmit": false
+        "noEmit": false,
+        "jsx": "react-jsx"
     },
     "include": [
         "src/**/*"
