--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "private": true,
   "scripts": {
-    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('Use yarn instead of npm for this project')\"",
     "build": "turbo run build",
     "dev": "turbo run dev",
     "format": "biome format --write ."
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "turbo": "^2.4.4"
   },
   "name": "@gekichumai/dxrating",
-  "packageManager": "yarn@4.4.1",
-  "workspaces": [
-    "apps/*",
-    "packages/*",
-    "scripts/*"
-  ]
+  "packageManager": "pnpm@10.4.1"
 }
