--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env-shell VITE_BUILD_PLATFORM=web \"vite\"",
-    "build": "echo 'WARNING: Use yarn build:web to build for web instead, or use yarn build:app to build for app instead. Building for web...' && yarn build:web",
+    "build": "echo 'WARNING: Use pnpm build:web to build for web instead, or use pnpm build:app to build for app instead. Building for web...' && pnpm build:web",
     "build:base": "tsc && vite build",
-    "build:app": "cross-env-shell VITE_BUILD_PLATFORM=app \"yarn build:base && rm -rf dist/js/*.map && cap copy\"",
-    "build:web": "cross-env-shell VITE_BUILD_PLATFORM=web \"yarn build:base && echo 'Artifacts built under dist/'\"",
+    "build:app": "cross-env-shell VITE_BUILD_PLATFORM=app \"pnpm build:base && rm -rf dist/js/*.map && cap copy\"",
+    "build:web": "cross-env-shell VITE_BUILD_PLATFORM=web \"pnpm build:base && echo 'Artifacts built under dist/'\"",
     "preview": "vite preview",
     "deploy:ios": "cap sync ios",
     "gen:supabase": "supabase gen types typescript --project-id lbtpnmdffuimikksrvns > src/models/supabase.types.ts",
@@ -22,7 +22,7 @@
     "@capacitor/ios": "^5.7.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@gekichumai/dxdata": "*",
+    "@gekichumai/dxdata": "workspace:*",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/material": "^5.17.1",
     "@radix-ui/react-collapsible": "^1.1.3",
