--- a/scripts/annotator/package.json
+++ b/scripts/annotator/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@enjoyjs/node-mecab": "^0.5.0",
-    "@gekichumai/dxdata": "*",
+    "@gekichumai/dxdata": "workspace:*",
     "dotenv": "^16.4.7",
     "esno": "^4.8.0",
     "fuse.js": "^7.1.0",
