Fix pnpm build config and CI setup after Yarn-to-pnpm migration
- Allow esbuild, @sentry/cli, and sharp postinstall scripts via
  onlyBuiltDependencies (previously all were blocked)
- Fix turbo.json outputs from .next/** to dist/** (Vite, not Next.js)
- Add pnpm store caching and reorder setup steps in release.yml
- Remove dead PATH line and replace npm -v with pnpm -v in ci_post_clone.sh

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,13 +21,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version-file: ".node-version"
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
+          cache: "pnpm"
 
       - name: Get Metadata
         id: git-meta
