--- a/package.json
+++ b/package.json
@@ -11,5 +11,18 @@
     "turbo": "^2.4.4"
   },
   "name": "@gekichumai/dxrating",
-  "packageManager": "pnpm@10.4.1"
+  "packageManager": "pnpm@10.4.1",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "@sentry/cli",
+      "sharp"
+    ],
+    "ignoredBuiltDependencies": [
+      "@biomejs/biome",
+      "core-js",
+      "protobufjs",
+      "workerd"
+    ]
+  }
 }
